<resources>
    <string name="app_name">ConfessMe</string>
    <string name="confessions_to_me">Confessıons To Me</string>
    <string name="my_confessions">My Confessıons</string>
    <string name="confess">Confess</string>
    <string name="no_confess_found_description">No Confess Found Description</string>
    <string name="no_confess_found_here">No Confess Found Here</string>
    <string name="reply_to_confession">Reply To Confession</string>
    <string name="fav_answer">Fav Answer</string>
    <string name="save">SAVE</string>
    <string name="change_password">Change Password</string>
    <string name="nobody_has_opened_up_to_you_just_yet">Nobody has opened up to you just yet</string>
    <string name="confess_to_someone_let_it_out">Confess to someone, let it out!</string>
    <string name="share_your_profile_with_your_friends">Share your profile with your friends!</string>
    <string name="you_haven_t_told_anyone_a_secret_yet">You haven\'t told anyone a secret yet.</string>
    <string name="no_user_found">No User Found</string>
    <string name="no_confessions_found_here">No confession found here</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="here_the_confessions_of_the_users_you_follow_are_displayed">Here, the confessions of the users you follow are displayed.</string>
    <string name="the_confessions_received_from_the_people_you_follow_are_visible_here">The confessions received from the people you follow are visible here</string>
    <string name="results">RESULTS</string>
    <string name="user_not_authenticated">User not authenticated</string>
    <string name="clear_all_history">Clear All History</string>
    <string name="username">username</string>
    <string name="description">description</string>
    <string name="confession">Confession</string>
    <string name="timestamp">timestamp</string>
    <string name="expanding_menu">Expanding Menu</string>
    <string name="i_want_to_confess_to_you_that">I want to confess to you that...</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_profile">My Profile</string>
    <string name="add_to_bookmarks">Add To Bookmarks</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="delete_confess">Delete Confess</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="user_name">User name</string>
    <string name="bio">Bio</string>
    <string name="save_and_proceed">SAVE AND PROCEED</string>
    <string name="_1_day_ago">1 day ago</string>
    <string name="days_ago">days ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="_1_week_ago">1 week ago</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="_1_year_ago">1 year ago</string>
    <string name="years_ago">years ago</string>
    <string name="months_ago">months ago</string>
    <string name="_1_month_ago">1 month ago</string>
    <string name="invalid_date_format">Invalid date format</string>
    <string name="notifications">Notifications</string>
    <string name="others_confess_ons">Others Confessıons</string>
    <string name="confessed">Confessed</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="i_want_to_confess">I want to confess</string>
    <string name="openly">openly</string>
    <string name="anonymously">anonymously</string>
    <string name="confession_is_too_long_max">"Confession is too long (max "</string>
    <string name="characters">" characters)"</string>
    <string name="confessedwithsmile">Confessed ;)</string>
    <string name="do_you_want_to_exit_without_sending_the_confession">Do you want to exit without sending the confession?</string>
    <string name="conf_rm_ex_t">confırm exıt</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="recent_searches">RECENT SEARCHES</string>
    <string name="follow">FOLLOW</string>
    <string name="error">Error</string>
    <string name="delete_all_history">delete all hıstory</string>
    <string name="are_you_sure_you_want_to_delete_the_entire_search_history">Are you sure you want to delete the entire search history?</string>
    <string name="remove_profile_photo">Remove Profile Photo</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="delete_search">delete search</string>
    <string name="are_you_sure_you_want_to_delete_the_selected_search">Are you sure you want to delete the selected search?</string>
    <string name="following_you">Following You</string>
    <string name="delete_answer">Delete Answer</string>
    <string name="are_you_sure_you_really_want_to_delete_this_answer">Are you sure you really want to delete this answer?</string>
    <string name="answer_is_too_long_max">"Answer is too long (max "</string>
    <string name="delete_confess_on">delete confessıon</string>
    <string name="are_you_sure_you_really_want_to_delete_this_confession">Are you sure you really want to delete this confession?</string>
    <string name="confession_deleted_successfully">Confession deleted successfully</string>
    <string name="successfully_added_to_bookmarks">Successfully added to bookmarks</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="close_lights">Close Lights</string>
    <string name="open_lights">Open Lights</string>
    <string name="sign_out">Sign Out</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_lower">" Sign In"</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">OR</string>
    <string name="type_your_password_again">Type your password again</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_lower">" Sign Up"</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="please_fill_in_all_fields">Please fill in all fields.</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="user_already_exists">User already exists</string>
    <string name="unknown_error">"Unknown error: "</string>
    <string name="fcm_token_retrieval_failed">FCM Token retrieval failed</string>
    <string name="successfully_signed_up">Successfully signed up</string>
    <string name="password_must_contain_at_least_one_uppercase_letter_one_digit_one_special_character_and_must_be_at_least_8_characters_long_it_should_not_contain_spaces">Password must contain at least one uppercase letter, one digit, one special character, and must be at least 8 characters long. It should not contain spaces.</string>
    <string name="skip">SKIP</string>
    <string name="set_your_profile">Set Your Profile</string>
    <string name="welcome_to">Welcome to</string>
    <string name="confessme">ConfessMe!</string>
    <string name="come_on_start_following_someone">Come on, start following someone!</string>
    <string name="be_the_first_one_to_confess">Be the first one to confess!</string>
    <string name="no_notifications_found_here">No notifications found here</string>
    <string name="username_can_be_up_to_30_characters_long">Username can be up to 30 characters long.</string>
    <string name="username_must_be_more_than_3_characters">Username must be more than 3 characters.</string>
    <string name="username_cannot_be_empty">Username cannot be empty.</string>
    <string name="username_cannot_contain_spaces">Username cannot contain spaces.</string>
    <string name="bio_can_be_up_to_200_characters_long">Bio can be up to 200 characters long.</string>
    <string name="username_cannot_be_anonymous">Username cannot be \"Anonymous\".</string>
    <string name="username_cannot_contain_line_breaks">Username cannot contain line breaks.</string>
    <string name="could_not_confess">Could not confess</string>
    <string name="user_not_found">User not found</string>
    <string name="confessed_successfully">Confessed successfully</string>
    <string name="confession_not_found">Confession not found</string>
    <string name="an_error_occurred_while_loading_the_confession">An error occurred while loading the confession</string>
    <string name="an_error_occurred_while_loading_confessions">An error occurred while loading confessions</string>
    <string name="an_error_occurred_while_fetching_followed_users">An error occurred while fetching followed users</string>
    <string name="unable_to_send_response">Unable to send response</string>
    <string name="the_like_couldn_t_be_completed_please_try_again">The like couldn\'t be completed. Please try again.</string>
    <string name="answer_not_found">Answer not found</string>
    <string name="could_not_be_deleted">Could not be deleted.</string>
    <string name="bookmark_added_successfully">Bookmark added successfully</string>
    <string name="failed_to_retrieve_bookmarks">Failed to retrieve bookmarks</string>
    <string name="username_is_already_taken_please_choose_a_different_one">Username is already taken. Please choose a different one.</string>
    <string name="profile_successfully_updated">Profile successfully updated</string>
    <string name="an_error_occurred_while_updating_profile">An error occurred while updating profile</string>
    <string name="an_error_occurred_while_pulling_the_following_count">An error occurred while pulling the following count</string>
    <string name="an_error_occurred_while_pulling_the_follower_count">An error occurred while pulling the follower count</string>
    <string name="user_data_not_found">User data not found</string>
    <string name="deletion_failed">Deletion failed</string>
    <string name="login_successful">Login successful</string>
    <string name="token_update_failed">Token update failed</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="an_error_occurred_please_try_again_later">An error occurred. Please try again later.</string>
    <string name="logout_successful">Logout successful</string>
    <string name="token_deletion_failed">Token deletion failed</string>
    <string name="fcm_token_deletion_failed">FCM Token deletion failed</string>
    <string name="no_user_signed_in">No user signed in</string>
    <string name="google_sign_in_successful">Google Sign-In successful</string>
    <string name="user_data_update_failed">User data update failed</string>
    <string name="error_getting_user_data">Error getting user data</string>
    <string name="google_sign_in_failed">Google Sign-In failed</string>
    <string name="you_ve_logged_in_with_your_google_account_please_visit_the_google_account_management_page_to_change_your_password">You\'ve logged in with your Google account. Please visit the Google account management page to change your password.</string>
    <string name="user_is_not_signed_in">User is not signed in.</string>
    <string name="select_language">Select Language</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm">CONFIRM</string>
    <string name="enter_password_prompt">Please enter your account password</string>
    <string name="deleting_account">Deleting your account...</string>
    <string name="please_wait">Please wait</string>
</resources>