<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.search.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
    </androidx.appcompat.widget.Toolbar>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/searchview_background"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/enter_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_toolbar" />

    <TextView
        android:id="@+id/historyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_searches"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginVertical="8dp"
        android:textColor="#b8b8b8"
        android:textSize="12sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deleteAllHistoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_all_history"
        android:textStyle="bold"
        android:layout_marginVertical="8dp"
        android:textColor="@color/confessmered"
        android:visibility="gone"
        android:background="@drawable/rounded_background"
        android:textSize="12sp"
        android:layout_marginEnd="16dp"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        >
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyResultsRecyclerviewId"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:layout_marginBottom="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAllHistoryTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginVertical="8dp"
        android:textColor="#b8b8b8"
        android:textSize="12sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResultsRecyclerviewId"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:layout_marginBottom="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultsTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/searchNoUserFoundView"
        layout="@layout/no_user_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?android:attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>